[workspace]
members = ["crates/core", "crates/derive"]
resolver = "2"
readme = "README.md"

[workspace.dependencies]
pinocchio-util = { path = "./crates/core" }
pinocchio-derive = { path = "./crates/derive" }

pinocchio = "0.11.1"

[profile.fast]
codegen-units = 16
inherits = "release"
opt-level = 2