[workspace]
members = ["crates/core", "crates/derive"]
resolver = "2"
readme = "README.md"

[workspace.dependencies]
pinocchio-util = { path = "./crates/core" }
pinocchio-derive = { path = "./crates/derive" }

pinocchio = { version = "0.11.1", features = ["account-resize"] }
pinocchio-system = "0.6.1"
pinocchio-token = "0.6.0"
pinocchio-token-2022 = "0.3.1"
pinocchio-associated-token-account = "0.4.0"

[profile.fast]
codegen-units = 16
inherits = "release"
opt-level = 2
