[package]
name = "pinocchio-util"
description = "Lightweight utilities for building Pinocchio programs"
repository = "https://github.com/joeymeere/pinocchio-util"
keywords = ["pinocchio", "solana"]
readme = { workspace = true }
edition = "2021"
version = "0.1.1"
license = "MIT"

[features]
derive = ["dep:pinocchio-derive"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio-derive = { workspace = true, optional = true }

[package.metadata.docs.rs]
features = []