[package]
name = "pinocchio-util"
description = "Lightweight utilities for building Pinocchio programs"
repository = "https://github.com/joeymeere/pinocchio-util"
keywords = ["pinocchio", "solana"]
readme = { workspace = true }
edition = "2021"
version = "0.2.0"
license = "MIT"

[features]
derive = ["dep:pinocchio-derive"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio-token = { workspace = true }
pinocchio-token-2022 = { workspace = true }
pinocchio-derive = { workspace = true, optional = true }
bytemuck = "1.24.0"

[package.metadata.docs.rs]
features = []
